@@ -6,8 +6,7 @@
 </head>
 <body>
     <div>
-     <h1><b>目录</b></h1>
-     <h2>Content</h2><br />
+    <h1><b>TABLE OF CONTENTS</b></h1>
     <ol>
     {% for entry in entries %}<li><a href="content.html#id_{{ entry['index'] }}">{{ entry['title'] }}</a></li>{% end %}
     </ol>
